test/forgetNonReconstructableInvalid.slq

def f0(x:ğ”¹){
	// break dependency
	y := dup(x);
	x := H(x);
	forget(y); // error: impossible because original x is missing
	return x;
}

